argocd/route_argocd.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server-route
  namespace: argocd
spec:
  host: argocd.apps.test.co.kr
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: argocd-server
    weight: 100
  wildcardPolicy: None
status: {}
